--- a/PRJ-04-AppTurisme/public/css/inicio.css
+++ b/PRJ-04-AppTurisme/public/css/inicio.css
@@ -139,6 +139,15 @@ body {
     border: none;
     background: white;
     border-radius: 5px;
+    transition: background-color 0.3s ease;
+    /* Agregar transición suave */
+}
+
+.filter-button.active {
+    background: #4CAF50;
+    /* Color verde cuando está activo */
+    color: white;
+    /* Cambiar el color del texto a blanco */
 }
 
 .search-box {
@@ -169,7 +178,7 @@ body {
     left: 50%;
     transform: translateX(-50%);
     padding: 15px;
-    background-color: rgba(0,0,0,0.7);
+    background-color: rgba(0, 0, 0, 0.7);
     color: white;
     border-radius: 25px;
     z-index: 1000;
@@ -182,7 +191,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0,0,0,0.5);
+    background-color: rgba(0, 0, 0, 0.5);
     z-index: 2000;
 }
 
@@ -209,18 +218,18 @@ body {
     align-items: center;
 }
 
+
 /* Estilos responsivos */
+
 @media (max-width: 600px) {
     .cabezera-container {
         display: none;
         flex-direction: column;
         align-items: center;
     }
-
     .cabezera-container.active {
         display: flex;
     }
-
     .hamburger-menu {
         display: block;
         position: fixed;
@@ -229,39 +238,32 @@ body {
         z-index: 2000;
         cursor: pointer;
     }
-
     .hamburger-menu div {
         width: 30px;
         height: 3px;
         background-color: black;
         margin: 5px 0;
     }
-
     .cabezera {
         width: 90%;
     }
-
     .filter-buttons {
         flex-direction: column;
         gap: 5px;
     }
-
     .filter-button {
         width: 100%;
         height: auto;
         padding: 10px;
     }
-
     .button-logout {
         width: 100%;
     }
-
     .play-button {
         width: 80%;
         padding: 10px;
         font-size: 16px;
     }
-
     .modal-content {
         width: 90%;
     }
